# miso-projects

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md
.github/workflows/: auto-merge-dev-to-main-on-schedule.yml  auto-merge-dev-to-main.yml  node-frontend.yml  run-test-updown-investing.yml
incubator/: sample.yaml
incubator/conner/: pyproject.toml
incubator/conner/app/: __init__.py
incubator/conner/scripts/: test.sh
incubator/learn-terraform-docker-container/: main.tf  outputs.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
incubator/miso-neovim/: init.lua  install.sh  refresh.sh
incubator/miso-neovim/lua/core/: config.lua  init.lua  mappings.lua  utils.lua
incubator/miso-neovim/lua/plugins/: init.lua
incubator/neovim/miso-neovim/: README.md  init.lua  uninstall.sh
incubator/node-frontend/: Dockerfile
incubator/node-frontend/scripts/: build-push.sh
incubator/retrofy/server/: pyproject.toml
incubator/retrofy/web/: package.json
incubator/tain-ai-terraform/sample-api/: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
incubator/tain-ai-terraform/sample-api/app/: main.py  wrong.py
incubator/tain-ai-terraform/sample-api/terraform/environments/dev/: backend.tf
incubator/tain-ai-terraform/sample-api/terraform/environments/prod/: .terraform.lock.hcl  backend.tf  main.tf  variables.tf
incubator/tain-ai-terraform/sample-api/terraform/modules/ecr/: main.tf  variables.tf
incubator/tain-ai-terraform/sample-api/terraform/modules/ecs/: cloudwatch.tf  main.tf  task.tf  variables.tf
incubator/tain-ai-terraform/sample-api/terraform/modules/lb/: main.tf  ourput.tf  output.tf  variables.tf
incubator/tain-ai-terraform/sample-api/terraform/modules/nat/: main.tf  variables.tf
incubator/tain-ai-terraform/sample-api/terraform/modules/network/: main.tf  output.tf  variables.tf
incubator/tain-ai-terraform/sample-api/terraform/modules/subnet/: main.tf  variables.tf
incubator/tain-ai-terraform/sample-api/terraform/modules/vpc/: main.tf  outputs.tf  variables.tf
incubator/updown-investing/: Dockerfile.alpine  Dockerfile.backup  Dockerfile.debian-slim  pyproject.toml
incubator/updown-investing/app/: main.py
incubator/updown-investing/scripts/: test.sh
incubator/updown-investing/tests/: test_main.py  test_read_root.py
practice/fast-api-logger/: pyproject.toml
practice/fast-api-logger/app/: main.py
practice/python-code-smells/: pyproject.toml
practice/python-code-smells/src/: after.py  before.py
reference/: README.md
reference/docker-getting-started/docs/css/: styles.css
reference/docker-getting-started/docs/tutorial/: index.md
reference/pytest-tutorial/cards_proj/: tox.ini
reference/pytest-tutorial/ch10/: test_cli.py  test_cli_alt.py  test_typer_testing.py
reference/pytest-tutorial/ch11/cards_proj/: .coveragerc  .gitignore  Dockerfile  tox.ini  tox_multiple_pythons.ini
reference/pytest-tutorial/ch12/script_importable/: tox.ini
reference/pytest-tutorial/ch15/local/: conftest.py
reference/pytest-tutorial/ch16/: test_ids.py  test_indirect.py  test_optional.py  test_param_gen.py  test_subset.py
reference/pytest-tutorial/ch3/: test_autouse.py  test_fixtures_ref.py.py  test_mod_scope.py
reference/pytest-tutorial/ch4/: test_config.py  test_version.py  test_warnings.py
reference/pytest-tutorial/ch5/: test_func_param.py
reference/python-brain-teasers/: foreword.py
reference/python-scripts/: poetry-install.py
reference/shell-scripts/: python-virtualenv-activate.sh
scripts/: append_ref_to_filename.py  change_all.py  check_assume_role.py  create-aws-oicd-provider.sh  create-aws-role-for-ecr-push.sh  create-poetry-api-server.sh  create-poetry-package.sh  get-github-sha  github-actions-in-javascript.js  install-airflow.sh  list-ecr-images.sh  push-to-github.py
tryouts/abc-python/: child_class.py  create_class_instance.py  decorator.py  decorator2.py  decorator_factory.py  dict_k_v_df.py  protocol_classes.py  pydantic_example.py  pyproject.toml
tryouts/abc-python/async/: async_tryout.py
tryouts/abc-python/notebooks/: ioc-techniques.ipynb
tryouts/asyncio-python/awaitables/: coroutines.py
tryouts/asyncio-python/using-yield/: main.py
tryouts/celery-tryout/: README.md  docker-compose.yaml  pyproject.toml  simple_celery.py
tryouts/celery-tryout/proj/: celery.py
tryouts/docker-compose-tryout/: README.md  docker-compose.yaml
tryouts/docker-compose-tryout/server/: Dockerfile  requirements.txt
tryouts/docker-stats-demo-tryout/: docker-compose.yaml
tryouts/docker-stats-demo-tryout/demo/: Dockerfile
tryouts/express-mvc-tryout/: .eslintrc  .prettierrc  package.json  pnpm-lock.yaml  tsconfig.json
tryouts/express-mvc-tryout/src/: index.ts
tryouts/express-tryout/: package.json  pnpm-lock.yaml  tsconfig.json
tryouts/express-tryout/scripts/: sample-requests.sh
tryouts/express-tryout/src/: index.ts
tryouts/fullstackfastapi/: .gitlab-ci.yml  README.md  cookiecutter-config-file.yml  docker-compose.yml
tryouts/fullstackfastapi/frontend/: Dockerfile  package-lock.json
tryouts/globals-python/src/: global_var.py  main.py  new_var.py
tryouts/mvc-mvp-mvvm/: .gitignore  README.md  pyproject.toml
tryouts/mvc-mvp-mvvm/scripts/: run.sh  test.sh
tryouts/mvc-mvp-mvvm/src/: simple_todolist.py
tryouts/mvc-mvp-mvvm/src/mvc/: controller.py  interfaces.py  main.py  model.py  view.py
tryouts/mvc-mvp-mvvm/src/mvp/: main.py  model.py  presenter.py  view.py
tryouts/mvc-mvp-mvvm/tests/: test_simple_todolist.py
tryouts/mvc-mvp-mvvm/tests/test_mvc/: test_main.py  test_model.py  test_view.py
tryouts/mvc-mvp-mvvm/tests/test_mvp/: test_main.py
tryouts/plug-debug-env/: .gitignore  pyproject.toml
tryouts/plug-debug-env/app/: config.py  logger.py  main.py
tryouts/pydantic-tryout/model-validation/: test.py  upper_to_lower.py
tryouts/pydantic-tryout/none-deal/: test.py
tryouts/redis-fastapi-tryout/: pyproject.toml
tryouts/redis-fastapi-tryout/src/: main.py
tryouts/rxjs-tryout/: package.json  pnpm-lock.yaml
tryouts/rxjs-tryout/src/: first-full-sample.ts  share-replay-sample.ts
(+57 files in other folders)
