[tool.poetry]
name = "updown-investing"
version = "0.1.0"
description = "Personal auto-trading application"
authors = ["Uiseop Eom <ytrtef@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "updown_investing"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
fastapi = "^0.95.0"
pydantic = "^1.10.7"
uvicorn = "^0.21.1"
httpx = "^0.23.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.261"
isort = "^5.12.0"
pre-commit = "^3.2.1"
black = "^23.3.0"
pytest = "^7.2.2"
fastapi = {extras = ["pytest"], version = "^0.95.0"}
coverage = "^7.2.2"

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    # "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.poetry.build]
generate-setup-file = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
