[tool.poetry]
name = "fastapi-api-logger"
version = "0.1.0"
description = "Fast API logger like node.js morgan"
authors = ["Uiseop Eom <ytrtef@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = ">=0.97.0,<0.98"
pydantic = "^1.10.8"
uvicorn = "^0.23.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
ruff = "^0.0.270"
bump2version = "^1.0.1"
isort = "^5.12.0"
coverage = "^7.2.2"

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    # "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.isort]
# https://github.com/timothycrosley/isort
# https://github.com/timothycrosley/isort/wiki/isort-Settings
profile = "black"

[tool.black]
# https://github.com/psf/black
line-length = 88
isort = true
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry.build]
generate-setup-file = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
