[tool.poetry]
name = "abc-python"
version = "0.1.0"
description = "A tryout directory for python"
authors = ["Uiseop Eom <ytrtef@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
pytest = "^7.4.2"
anyio = "^4.0.0"
pytest-anyio = "^0.0.0"
pytest-asyncio = "^0.21.1"
pydantic = "^1.10.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
ruff = "^0.0.290"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
