[tool.poetry]
name = "mvc-mvp-mvvm"
version = "0.1.0"
description = "A tryout for exploring mvc, mvp, mvvm pattern in python."
authors = ["Uiseop Eom <ytrtef@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tkinter-page = "^0.0.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.261"
isort = "^5.12.0"
pre-commit = "^3.2.1"
pytest = "^7.2.2"
coverage = "^7.2.2"


[tool.poetry.group.black.dependencies]
black = "^23.3.0"

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    # "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.isort]
# https://github.com/timothycrosley/isort
# https://github.com/timothycrosley/isort/wiki/isort-Settings
profile = "black"

[tool.black]
# https://github.com/psf/black
line-length = 88
isort = true
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry.build]
generate-setup-file = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
