[tool.poetry]
name = "sample-api"
version = "0.1.0"
description = "A sample hello world fastapi server"
authors = ["Uiseop Eom <ytrtef@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
ruff = "^0.0.260"
pre-commit = "^3.2.1"

[tool.isort]
profile = "black"
known_third_party = ["fastapi", "pydantic", "starlette"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
